--- a/style.css
+++ b/style.css
@@ -447,6 +447,19 @@ main .deck--featured .card .card-title a:after {
 	margin-left: 10px;
 }
 
+/* TinyMCE on Announcements Submission */
+#tinymce {
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+}
+
+#tinymce p {
+	margin: 0;
+	padding: 1em;
+}
+
 /* Bottom section divider */
 main .bottom-divider {
 	padding-bottom: 0;
