Adjusted color of category links in footer to meet accessibility

--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -147,6 +147,12 @@ figcaption {
 
 .article-footer a {
 	border-bottom: none;
+	color: #686868;
+	transition: border .3s ease;
+}
+
+.article-footer a:hover {
+	border-bottom: 1px solid;
 }
 
 main a.button,
