--- a/style.css
+++ b/style.css
@@ -692,6 +692,12 @@ figcaption {
 
 .article-footer a {
 	border-bottom: none;
+	color: #686868;
+	transition: border .3s ease;
+}
+
+.article-footer a:hover {
+	border-bottom: 1px solid;
 }
 
 main a.button,
