--- a/style.css
+++ b/style.css
@@ -900,6 +900,10 @@ main .card-title a:hover {
 	font-size: .5em;
 }
 
+.pagination a {
+	border-bottom: none;
+}
+
 .primary-categories a:after,
 main .card-title a:after {
 	background: url(images/icons/link.svg) no-repeat;
@@ -980,5 +984,15 @@ svg path {
 
 figcaption {
 	background: url(images/icons/photo.svg) 2px 12px / 14px no-repeat;
+}
+
+.pagination-previous a {
+	background: url(images/icons/arrow-left.svg) left top / 1.2em no-repeat;
+	padding-left: 1.5em;
+}
+
+.pagination-next a {
+	background: url(images/icons/arrow-right.svg) right top / 1.2em no-repeat;
+	padding-right: 1.5em;
 }
 /*# sourceMappingURL=style.css.map */
