--- a/style.css
+++ b/style.css
@@ -90,45 +90,16 @@ figure img,
 	display: block;
 }
 
-.social-share-bar,
-.social-share-bar ul,
-.social-share-bar li,
-.social-share-bar li a {
-	height: auto;
-	line-height: normal;
-	width: auto;
+.article-footer {
+	position: static;
 }
 
-.social-share-bar {
-	bottom: 0;
+.card-share {
 	margin-right: -3rem;
 	position: absolute;
-	right: -43%;
-	text-align: right;
-}
-
-.social-share-bar div {
-	display: inline-block;
-	text-align: left;
-}
-
-.social-share-bar div > span {
-	display: block;
-	margin: 5px 3px;
-}
-
-.social-share-bar ul {
-	background: #f2f2f2;
-	display: inline-block;
-	padding: 12px 20px;
-}
-
-.social-share-bar li {
-	margin-left: 16px;
-}
-
-.social-share-bar li:first-of-type {
-	margin-left: 0;
+	right: 48px;
+	top: 0;
+	z-index: 1;
 }
 
 .single-wsu_announcement .wsu_announcement {
@@ -336,6 +307,11 @@ main .deck--featured .card .card-title a:after {
 
 	.featured-image figcaption {
 		margin-left: 1.5rem;
+	}
+
+	.card-share {
+		margin-top: calc(-3rem - 1.6em);
+		top: auto;
 	}
 }
 
@@ -677,14 +653,32 @@ figcaption {
 	text-transform: none;
 }
 
-.social-share-bar span {
-	color: #da1e00;
-	font-size: 16.5px;
-	font-weight: 400;
+.card-share {
+	font-size: 16px;
 }
 
-.social-share-bar a {
+.card-share p {
+	color: #da1e00;
+	font-size: .93em;
+	line-height: 1.5;
+	padding: 0 .2em .2em;
+}
+
+.card-share a {
+	background: #f2f2f2;
 	border-bottom: none;
+	float: left;
+	line-height: 0;
+	padding: .75em;
+}
+
+.article-footer .card-share a:hover {
+	border-bottom: none;
+}
+
+.card-share a:hover use,
+.card-share a:focus use {
+	fill: #da1e00;
 }
 
 .article-footer dl {
@@ -833,6 +827,13 @@ input#mce-EMAIL {
 	#mc_embed_signup_scroll input[type="submit"] {
 		margin: 5px 0 0;
 		width: 250px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+
+	.card-share a {
+		background-color: #fff;
 	}
 }
 
