--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -132,14 +132,32 @@ figcaption {
 	text-transform: none;
 }
 
-.social-share-bar span {
-	color: #da1e00;
-	font-size: 16.5px;
-	font-weight: 400;
+.card-share {
+	font-size: 16px;
 }
 
-.social-share-bar a {
+.card-share p {
+	color: #da1e00;
+	font-size: .93em;
+	line-height: 1.5;
+	padding: 0 .2em .2em;
+}
+
+.card-share a {
+	background: #f2f2f2;
 	border-bottom: none;
+	float: left;
+	line-height: 0;
+	padding: .75em;
+}
+
+.article-footer .card-share a:hover {
+	border-bottom: none;
+}
+
+.card-share a:hover use,
+.card-share a:focus use {
+	fill: #da1e00;
 }
 
 .article-footer dl {
@@ -286,6 +304,13 @@ input#mce-EMAIL {
 	#mc_embed_signup_scroll input[type="submit"] {
 		margin: 5px 0 0;
 		width: 250px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+
+	.card-share a {
+		background-color: #fff;
 	}
 }
 
