--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -192,10 +192,15 @@ main input[type="submit"] {
 }
 
 main a.button:hover,
+main a.button:focus,
 main button:hover,
+main button:focus,
 main input[type="button"]:hover,
+main input[type="button"]:focus,
 main input[type="reset"]:hover,
-main input[type="submit"]:hover {
+main input[type="reset"]:focus,
+main input[type="submit"]:hover,
+main input[type="submit"]:focus {
 	background: #ca1237;
 	border: 1px solid #ca1237;
 	color: #fff;
@@ -284,6 +289,7 @@ main textarea {
 input#mce-EMAIL {
 	display: inline-block;
 	min-width: 250px;
+	vertical-align: bottom;
 }
 
 #mc_embed_signup_scroll input[type="submit"] {
