Vary the font size of "Announcements" H1 on mobile
This reduces the size of the H1 as the screen gets smaller so that
the word "Announcements" does not always bleed off the screen.

--- a/style.css
+++ b/style.css
@@ -594,6 +594,10 @@ h6 {
 
 @media screen and (max-width: 700px) {
 
+	.post-type-archive-wsu_announcement h1 {
+		font-size: 11vw;
+	}
+
 	h1 {
 		font-size: 2.25rem;
 	}
