--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -276,10 +276,12 @@ main textarea {
 	background: #a60f2d;
 }
 
+.deck--numbered-list article:nth-child(8) .card-title a:before,
 .deck--numbered-list article:nth-child(4) .card-title a:before {
 	background: #be000f;
 }
 
+.deck--numbered-list article:nth-child(7) .card-title a:before,
 .deck--numbered-list article:nth-child(5) .card-title a:before {
 	background: #da1e00;
 }
