Improve accessibility of pagination
Use a proper `nav` element and add screen reader text to better
inform users of link purpose.

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -365,6 +365,11 @@ main .deck--featured .card .card-title a:after {
 	text-align: right;
 }
 
+.archive-footer nav li {
+	display: inline-block;
+	padding: 0 .2em;
+}
+
 @media screen and (max-width: 693px) {
 
 	#binder .row.news-features .column.multi-deck {
