--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -170,6 +170,13 @@ main figure > a {
 	grid-column-gap: 2rem;
 }
 
+.deck--wsu-events {
+	padding: 0 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+	grid-template-rows: max-content;
+	margin-left: -2rem;
+}
+
 /* - allow aligning elements within an item - */
 .card {
 	column-span: none;
@@ -184,6 +191,11 @@ main figure > a {
 
 .card-date {
 	margin-bottom: .5rem;
+}
+
+.card-time {
+	display: block;
+	margin: .25rem 0 .75rem;
 }
 
 .card-categories {
@@ -232,7 +244,8 @@ main .deck--featured .card .card-title a:after {
 
 /* --- multi deck --- */
 .deck-features,
-.deck--wsu-news {
+.deck--wsu-news,
+.deck--wsu-events {
 	float: left;
 	width: 66%;
 }
@@ -246,6 +259,7 @@ main .deck--featured .card .card-title a:after {
 
 	.deck-features,
 	.deck--wsu-news,
+	.deck--wsu-events,
 	.deck--numbered-list {
 		float: none;
 		width: auto;
@@ -330,6 +344,10 @@ main .deck--featured .card .card-title a:after {
 	margin: 3rem 0 1.5rem;
 }
 
+.deck--wsu-events .deck-header h2 {
+	margin-bottom: 0;
+}
+
 /* --- deck--numbered-list --- */
 .deck--numbered-list {
 	display: block;
@@ -383,6 +401,10 @@ main .deck--featured .card .card-title a:after {
 		padding: 2rem;
 	}
 
+	.deck.deck--wsu-events {
+		margin: 0 -2rem;
+	}
+
 	.news-features .deck-features article:nth-child(3) {
 		display: none;
 	}
@@ -409,6 +431,11 @@ main .deck--featured .card .card-title a:after {
 
 #mc_embed_signup_scroll input[type="submit"] {
 	margin-left: 10px;
+}
+
+/* --- utilities --- */
+.bg-gray {
+	background: rgba(0, 0, 0, .05);
 }
 
 /* TinyMCE on Announcements Submission */
