--- a/style.css
+++ b/style.css
@@ -183,14 +183,6 @@ main figure > a {
 	grid-column-gap: 2rem;
 }
 
-.deck--wsu-events {
-	padding: 0 2rem;
-	grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-	grid-template-rows: -webkit-max-content;
-	grid-template-rows: max-content;
-	margin-left: -2rem;
-}
-
 /* - allow aligning elements within an item - */
 .card {
 	-webkit-column-span: none;
@@ -279,6 +271,11 @@ main .deck--featured .card .card-title a:after {
 		float: none;
 		width: auto;
 	}
+
+	.deck--wsu-events {
+		-ms-flex-item-align: baseline;
+		    align-self: baseline;
+	}
 }
 
 #binder .row.news-features .column.multi-deck {
@@ -286,6 +283,8 @@ main .deck--featured .card .card-title a:after {
 	grid-gap: 1.5rem;
 	grid-template-areas: "feature cheat" "news cheat";
 	grid-template-columns: 75% 25%;
+	grid-template-rows: -webkit-max-content;
+	grid-template-rows: max-content;
 }
 
 .card--features {
@@ -363,8 +362,14 @@ main .deck--featured .card .card-title a:after {
 	margin: 3rem 0 1.5rem;
 }
 
-.deck--wsu-events .deck-header h2 {
-	margin-bottom: 0;
+/* --- deck with a button --- */
+.deck .button {
+	grid-column-start: 1;
+	grid-column-end: -1;
+	display: inline;
+	width: -webkit-max-content;
+	width: -moz-max-content;
+	width: max-content;
 }
 
 /* --- deck--numbered-list --- */
@@ -419,14 +424,6 @@ main .deck--featured .card .card-title a:after {
 		border: none;
 		margin: 0 -2rem;
 		padding: 2rem;
-	}
-
-	.deck.deck--wsu-events {
-		margin: 0 -2rem;
-	}
-
-	.news-features .deck-features article:nth-child(3) {
-		display: none;
 	}
 }
 
