`.deck .button` needs `display: inline-block` to position correctly

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -350,7 +350,7 @@ main .deck--featured .card .card-title a:after {
 .deck .button {
 	grid-column-start: 1;
 	grid-column-end: -1;
-	display: inline;
+	display: inline-block;
 	width: max-content;
 }
 
