--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ main .deck--featured .card .card-title a:after {
 .deck .button {
 	grid-column-start: 1;
 	grid-column-end: -1;
-	display: inline;
+	display: inline-block;
 	width: -webkit-max-content;
 	width: -moz-max-content;
 	width: max-content;
