--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -292,20 +292,15 @@ main textarea {
 
 /* - MailChimp embed - */
 #mc_embed_signup_scroll label {
-	display: block;
-	font-size: 1rem;
-	margin-bottom: .5rem;
+	font-size: 1.2rem;
+	line-height: 1.25;
+	margin: 0 1rem 0 0;
 }
 
 input#mce-EMAIL {
 	display: inline-block;
 	min-width: 250px;
 	vertical-align: bottom;
-}
-
-#mc_embed_signup_scroll input[type="submit"] {
-	margin: 0 0 0 10px;
-	height: 40px;
 }
 
 @media screen and (min-width: 990px) and (max-width: 1126px) {
@@ -316,18 +311,23 @@ input#mce-EMAIL {
 	}
 }
 
-@media screen and (min-width: 694px) and (max-width: 910px) {
-
-	#mc_embed_signup_scroll input[type="submit"] {
-		margin: 5px 0 0;
-		width: 250px;
-	}
-}
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 780px) {
 
 	.card-share a {
 		background-color: #fff;
+	}
+
+	#mc_embed_signup {
+		text-align: center;
+	}
+
+	#mc_embed_signup_scroll {
+		justify-content: center;
+	}
+
+	#mc_embed_signup_scroll label {
+		flex: 1 100%;
+		margin: 0 0 1rem;
 	}
 }
 
@@ -432,4 +432,25 @@ main .card-title a:hover {
 	font-weight: 400;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+}
+
+/* --- site footer --- */
+.site-footer nav ul {
+	font-size: .8em;
+	margin-right: 2rem;
+	padding: 0;
+}
+
+.site-footer nav a {
+	border-color: rgba(255, 255, 255, .5);
+	font-weight: 300;
+}
+
+.site-footer nav ul li:first-child {
+	padding-bottom: .5rem;
+}
+
+.site-footer nav ul li:first-child a {
+	border: none;
+	font-weight: 700;
 }
