--- a/style.css
+++ b/style.css
@@ -427,6 +427,54 @@ main .deck--featured .card .card-title a:after {
 	}
 }
 
+/* --- site footer --- */
+.site-footer {
+	margin-top: 1rem;
+}
+
+.site-footer .deck {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+}
+
+.site-footer .card {
+	-ms-flex: 1;
+	    flex: 1;
+}
+
+.site-footer .card--nav {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	min-width: 250px;
+}
+
+.site-footer .card--mark {
+	max-width: 300px;
+	min-width: 200px;
+}
+
+@media screen and (max-width: 550px) {
+
+	.site-footer .card {
+		-ms-flex: 1 100%;
+		    flex: 1 100%;
+		margin: 0 auto;
+	}
+
+	.site-footer .card--nav {
+		-ms-flex-pack: center;
+		    justify-content: center;
+	}
+
+	.site-footer .card--mark {
+		margin-top: 4rem;
+	}
+}
+
 /* --- home page --- */
 .home .top-head {
 	padding-top: 3.5rem;
@@ -436,18 +484,29 @@ main .deck--featured .card .card-title a:after {
 	padding-top: 2rem;
 }
 
-.bg-none #mc_embed_signup {
+#mc_embed_signup {
 	background: none;
-	text-align: center;
+	text-align: right;
 }
 
 #mc_embed_signup form {
-	margin-top: -.5rem;
-	padding: 0 0 0 2rem;
+	padding: 0;
+}
+
+#mc_embed_signup_scroll {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-ms-flex-align: center;
+	    align-items: center;
+	-ms-flex-pack: end;
+	    justify-content: flex-end;
 }
 
 #mc_embed_signup_scroll input[type="submit"] {
-	margin-left: 10px;
+	height: 40px;
+	margin: 0 0 0 .25rem;
 }
 
 /* --- utilities --- */
@@ -549,8 +608,6 @@ main .bottom-divider {
 		max-width: 1168px;
 	}
 }
-
-/* --- river - vertical list of cards --- */
 
 main {
 	color: #191919;
@@ -848,20 +905,15 @@ main textarea {
 
 /* - MailChimp embed - */
 #mc_embed_signup_scroll label {
-	display: block;
-	font-size: 1rem;
-	margin-bottom: .5rem;
+	font-size: 1.2rem;
+	line-height: 1.25;
+	margin: 0 1rem 0 0;
 }
 
 input#mce-EMAIL {
 	display: inline-block;
 	min-width: 250px;
 	vertical-align: bottom;
-}
-
-#mc_embed_signup_scroll input[type="submit"] {
-	margin: 0 0 0 10px;
-	height: 40px;
 }
 
 @media screen and (min-width: 990px) and (max-width: 1126px) {
@@ -872,18 +924,25 @@ input#mce-EMAIL {
 	}
 }
 
-@media screen and (min-width: 694px) and (max-width: 910px) {
-
-	#mc_embed_signup_scroll input[type="submit"] {
-		margin: 5px 0 0;
-		width: 250px;
-	}
-}
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 780px) {
 
 	.card-share a {
 		background-color: #fff;
+	}
+
+	#mc_embed_signup {
+		text-align: center;
+	}
+
+	#mc_embed_signup_scroll {
+		-ms-flex-pack: center;
+		    justify-content: center;
+	}
+
+	#mc_embed_signup_scroll label {
+		-ms-flex: 1 100%;
+		    flex: 1 100%;
+		margin: 0 0 1rem;
 	}
 }
 
@@ -988,6 +1047,27 @@ main .card-title a:hover {
 	font-weight: 400;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+}
+
+/* --- site footer --- */
+.site-footer nav ul {
+	font-size: .8em;
+	margin-right: 2rem;
+	padding: 0;
+}
+
+.site-footer nav a {
+	border-color: rgba(255, 255, 255, .5);
+	font-weight: 300;
+}
+
+.site-footer nav ul li:first-child {
+	padding-bottom: .5rem;
+}
+
+.site-footer nav ul li:first-child a {
+	border: none;
+	font-weight: 700;
 }
 
 .primary-categories a:after,
