Adjust font weights throughout
This:
* removes the 300 font weight;
* adds the 600 font weight;
* changes the body default font weight to 400;
* changes the default `main a` font weight to 600; and
* changes the weight of a few anchors back to 400.

--- a/style.css
+++ b/style.css
@@ -611,13 +611,13 @@ main .bottom-divider {
 
 main {
 	color: #191919;
-	font: 300 18px/28px "Source Sans Pro", sans-serif;
+	font: 400 18px/28px "Source Sans Pro", sans-serif;
 }
 
 main a {
 	border-bottom: 1px solid #da1e00;
 	color: #191919;
-	font-weight: 400;
+	font-weight: 600;
 	transition: color .3s ease;
 }
 
@@ -716,7 +716,6 @@ figcaption {
 	color: #717171;
 	font-size: .7em;
 	font-style: italic;
-	font-weight: 400;
 	letter-spacing: .02em;
 	line-height: normal;
 	padding: .75rem 1rem .75rem 1.4rem;
@@ -725,7 +724,6 @@ figcaption {
 .primary-categories ul {
 	list-style: none;
 	font-size: 15px;
-	font-weight: 400;
 	padding: 0;
 	text-transform: uppercase;
 }
@@ -733,6 +731,7 @@ figcaption {
 .primary-categories a {
 	color: #da1e00;
 	border: none;
+	font-weight: 400;
 }
 
 .primary-categories a:hover {
@@ -742,7 +741,6 @@ figcaption {
 .article-header hgroup.source {
 	color: #191919;
 	font-size: 14px;
-	font-weight: 400;
 	padding: 0;
 	text-transform: none;
 }
@@ -784,6 +782,7 @@ figcaption {
 .article-footer a {
 	border-bottom: none;
 	color: #686868;
+	font-weight: 400;
 }
 
 .article-footer a:hover {
@@ -964,7 +963,6 @@ main .card-categories,
 	color: #da1e00;
 	display: block;
 	font-size: .9rem;
-	font-weight: 400;
 	line-height: 1.25;
 	text-transform: uppercase;
 }
@@ -987,15 +985,13 @@ main .card-title a:hover {
 }
 
 .card-time {
-	color: initial;
+	color: #767676;
 	font-size: .9em;
-	font-weight: 300;
 	text-transform: none;
 }
 
 .card-excerpt {
 	font-size: 1rem;
-	font-weight: 400;
 }
 
 /* --- home page styles --- */
@@ -1035,16 +1031,10 @@ main .card-title a:hover {
 	font-weight: 400;
 }
 
-.header-link {
-	font-size: .9em;
-	font-weight: 300;
-}
-
 /* --- archive descriptions --- */
 .page-header .description {
 	color: #da1e00;
 	font-size: .8em;
-	font-weight: 400;
 	letter-spacing: .1em;
 	text-transform: uppercase;
 }
@@ -1058,7 +1048,7 @@ main .card-title a:hover {
 
 .site-footer nav a {
 	border-color: rgba(255, 255, 255, .5);
-	font-weight: 300;
+	font-weight: 400;
 }
 
 .site-footer nav ul li:first-child {
@@ -1067,7 +1057,7 @@ main .card-title a:hover {
 
 .site-footer nav ul li:first-child a {
 	border: none;
-	font-weight: 700;
+	font-weight: 900;
 }
 
 .primary-categories a:after,
