--- a/style.css
+++ b/style.css
@@ -637,6 +637,7 @@ main a {
 	border-bottom: 1px solid #da1e00;
 	color: #191919;
 	font-weight: 600;
+	text-decoration: none;
 	transition: color .3s ease;
 }
 
