--- a/style.css
+++ b/style.css
@@ -524,6 +524,7 @@ main .deck--featured .card .card-title a:after {
 #mc_embed_signup_scroll input[type="submit"] {
 	height: 40px;
 	margin: 0 0 0 .25rem;
+	line-height: 1;
 }
 
 /* --- utilities --- */
