--- a/style.css
+++ b/style.css
@@ -482,9 +482,9 @@ main .deck--featured .card .card-title a:after {
 		margin: 0 auto;
 	}
 
-	.site-footer .card--nav {
-		-ms-flex-pack: center;
-		    justify-content: center;
+	.site-footer nav .nav-group {
+		margin: 0 0 1rem;
+		width: 100%;
 	}
 
 	.site-footer .card--mark {
