Align figures to the right when right alignment is selected

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -121,6 +121,12 @@ figure.alignnone {
 	padding: 12px;
 }
 
+figure.alignright {
+	float: right;
+	margin-left: 1em;
+	margin-right: 0;
+}
+
 .single-post .article-body > p:last-child,
 .single-post .article-body > ul:last-child > li:last-child {
 	position: relative;
