--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -177,6 +177,16 @@ main figure > a {
 	position: relative;
 }
 
+/* --- blockquote styles to be used as a pullquote --- */
+blockquote {
+    background-color:#f2f2f2; 
+    padding-top:1em; 
+    padding-left:2em; 
+    padding-right:2em; 
+    margin-bottom:1.5em; 
+    margin-top:.5em;
+}
+
 /* --- Content syndicate cards --- */
 
 /* CSS Grid fallback */
