Blockquote, Square Ender, and Byline Styles
Tweaking padding/margins and adding media queries to block quotes,
fixing some square ender style issues, and adding byline styles for
possible use.

--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -76,6 +76,14 @@ b {
 	font-weight: 600;
 }
 
+/* --- byline style for posts --- */
+.byline {
+	color: #717171;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 1.5em;
+	padding-bottom: .25em;
+}
+
 @media screen and (max-width: 700px) {
 
 	.post-type-archive-wsu_announcement h1 {
