--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -82,6 +82,8 @@ b {
 	border-bottom: 1px solid #ccc;
 	margin-bottom: 1.5em;
 	padding-bottom: .25em;
+	display: inline-block;
+	padding-right: .3em;
 }
 
 @media screen and (max-width: 700px) {
