--- a/style.css
+++ b/style.css
@@ -1251,4 +1251,18 @@ figcaption {
 	background: url(images/icons/arrow-right.svg) right top / 1.2em no-repeat;
 	padding-right: 1.5em;
 }
+
+/* --- custom TablePress styles --- */
+.tablepress tfoot th, 
+.tablepress thead th {
+	background-color:#5d686f;
+	color:#fff;
+	font-weight:400;
+}
+
+.tablepress tfoot th:hover, 
+.tablepress thead th:hover {
+	background-color:#43474a;
+}
+
 /*# sourceMappingURL=style.css.map */
